--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RyPnt Website</title>
+    <title>BVFreak</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
@@ -11,26 +11,26 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">RyPnt Gaming</span>
+            <span class="fs-4">BVFreak</span>
           </a>
     
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="https://www.youtube.com/c/RyPntGaming/videos" class="nav-link">Content</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a href="https://www.youtube.com/c/RyPntGaming/about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="https://github.com/BVFreak" class="nav-link">Github</a></li>
+            <li class="nav-item"><a href="https://bvfreak.itch.io/" class="nav-link">Itch</a></li>
+            <li class="nav-item"><a href="https://www.youtube.com/channel/UCtCVKyw8w9Dti3vhkKN8LTg" class="nav-link">Youtube</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
           </ul>
         </header>
       </div>
       <div class="px-4 py-5 my-5 text-center">
         <img class="d-block mx-auto mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="display-5 fw-bold">Welcome to the official website of RyPnt Gaming!</h1>
+        <h1 class="display-5 fw-bold">Welcome to the official website of bvfreak</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">stuff idk more stuff <b>oo im bold</b> dang im not <i>now im italic yay</i></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-danger btn-lg px-4 gap-3" href="https://www.youtube.com/c/RyPntGaming?view_as=subscriber?sub_confirmation=1" role="button">Subscribe!</button>
-            <button type="button" class="btn btn-outline-primary btn-lg px-4" href="https://discord.com/invite/EmZbRzf2ED" role="button">Join The Discord server!</button>
+            <iframe src="https://discord.com/widget?id=1027099792691699783&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           </div>
         </div>
       </div>
