--- a/index.html
+++ b/index.html
@@ -29,21 +29,10 @@
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">stuff idk more stuff <b>oo im bold</b> dang im not <i>now im italic yay</i></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-danger btn-lg px-4 gap-3" href="https://www.youtube.com/c/RyPntGaming?view_as=subscriber?sub_confirmation=1" role="button">Subscribe!</button>
+            <button type="button" class="btn btn-danger btn-lg px-4 gap-3" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" role="button">im a button!</button>
             <iframe src="https://discord.com/widget?id=1027099792691699783&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">You won!</h5>
-          <p class="card-text">wow this is very cool.</p>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-warning">Redeem</a>
-        </div>
-      </div>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
       </div>
       <div class="container">
         <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
@@ -61,10 +50,9 @@
           <div class="col mb-3">
             <h5>Links</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="https://discord.com/invite/EmZbRzf2ED" class="nav-link p-0 text-muted">Discord</a></li>
-              <li class="nav-item mb-2"><a href="https://www.youtube.com/c/RyPntGaming?view_as=subscriber?sub_confirmation=1" class="nav-link p-0 text-muted">Youtube</a></li>
-              <li class="nav-item mb-2"><a href="https://withkoji.com/@RyPnt_Gaming" class="nav-link p-0 text-muted">bio</a></li>
-              <li class="nav-item mb-2"><a href="https://www.youtube.com/c/RyPntGaming/about" class="nav-link p-0 text-muted">About</a></li>
+              <li class="nav-item mb-2"><a href="https://discord.gg/UwNmdkfPeY" class="nav-link p-0 text-muted">Discord</a></li>
+              <li class="nav-item mb-2"><a href="https://www.youtube.com/channel/UCtCVKyw8w9Dti3vhkKN8LTg" class="nav-link p-0 text-muted">Youtube</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
             </ul>
           </div>
       
@@ -78,11 +66,7 @@
           <div class="col mb-3">
             <h5>Website</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="https://github.com/BVFreak" class="nav-link p-0 text-muted">BVFreak Github</a></li>
-              <li class="nav-item mb-2"><a href="https://www.youtube.com/channel/UCtCVKyw8w9Dti3vhkKN8LTg" class="nav-link p-0 text-muted">BVFreak Youtube</a></li>
-              <li class="nav-item mb-2"><a href="https://bvfreak.itch.io/" class="nav-link p-0 text-muted">BVFreak Itch</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">yes, i made this website</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">im pretty cool too</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">WHY yes, i made this website</a></li>
             </ul>
           </div>
         </footer>
